2013-04-21  David S. Miller  <davem@davemloft.net>

	* po/ru.po: Update Russion translation from translation project.

2013-04-17  Adam Conrad  <adconrad@0c3.net>

	* sysdeps/unix/sysv/linux/sys/fsuid.h: Remove __wur from setfsuid
	and setfsgid.

2013-04-17  Carlos O'Donell  <carlos@redhat.com>

	* configure.in: Remove i386 configure warning. Remove i386 case.
	* configure: Regenerate.
	* sysdeps/i386/configure.in: Raise error if config_machine is i386.
	Add example to error message.
	* sysdeps/i386/configure: Regenerate.

2013-04-17  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/Makefile (bench): Add cos, tan, slowcos and
	slowtan.
	* benchtests/cos-inputs: New file.
	* benchtests/slowcos-inputs: New file.
	* benchtests/slowcos.c: New file.
	* benchtests/slowtan-inputs: New file.
	* benchtests/slowtan.c: New file.
	* benchtests/tan-inputs: New file.

2013-04-16  Roland McGrath  <roland@hack.frob.com>

	* rt/tst-aio7.c (do_test): Don't test O_RDONLY fd case, which is now
	considered kosher.

2013-04-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/Makefile: Include cppflags-iterator.mk to add
	-DNOT_IN_libc=1 to CPPFLAGS of all benchmark programs.

	* Makefile.in (bench-clean): New target.
	* benchtests/Makefile (bench-clean): Likewise.

2013-04-16  David Holsgrove  <david.holsgrove@xilinx.com>

	* elf/elf.h: Add EM_MICROBLAZE and MicroBlaze relocations.

2013-04-15  Thomas Schwinge  <thomas@codesourcery.com>

	* stdio-common/tstdiomisc.c: Fix coding-style violation.

2013-04-15  Andreas Schwab  <schwab@suse.de>

	* nscd/grpcache.c (cache_addgr): Properly check for short write.
	* nscd/initgrcache.c (addinitgroupsX): Likewise.
	* nscd/pwdcache.c (cache_addpw): Likewise.
	* nscd/servicescache.c (cache_addserv): Likewise.  Don't write
	more than recsize.

2013-04-15  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/Makefile (bench): Write all output to
	bench-out.tmp together.

2013-04-15  Andreas Schwab  <schwab@suse.de>
